engram-core/tests/compile_fail/memory_builder_missing_confidence.stderr
error[E0599]: no method named `build` found for struct `MemoryBuilder<engram_core::memory::memory_builder_states::NoConfidence>` in the current scope
  --> tests/compile_fail/memory_builder_missing_confidence.rs:14:10
   |
11 |       let _memory = MemoryBuilder::new()
   |  ___________________-
12 | |         .id("test_memory".to_string())
13 | |         .embedding([0.1f32; 768])
14 | |         .build(); //~ ERROR: method `build` not found for this value
   | |         -^^^^^ method not found in `MemoryBuilder<NoConfidence>`
   | |_________|
   |
   |
   = note: the method was found for
           - `MemoryBuilder<engram_core::memory::memory_builder_states::Ready>`
